--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -2,49 +2,33 @@
 <html>
 <head>
     <title>Photobooth</title>
-    <script src="/static/js/jquery.js"></script>
-    <script src="/static/js/jquery.lettering.js"></script>
-    <script src="/static/js/jquery.textillate.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/jquery.lettering.js"></script>
+    <script src="/js/jquery.textillate.js"></script>
     <script src="/js/bootstrap.js"></script>
-    <link rel="stylesheet" href="/static/style/animate.css">
-    <link rel="stylesheet" href="/static/style/circle-spinner.css">
+    <link rel="stylesheet" href="/style/animate.css">
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
 <div id="container">
-
-    <div class="full-with">
-        <h1 class="tlt">
-            <ul class="texts">
-                <li data-out-effect="bounce" data-out-effect="fadeOut" data-out-shuffle="true">Toucher pour commencer
-                </li>
-                <li data-in-effect="flash">Bon tu veux prendre une photo ou pas ?</li>
-                <li data-in-effect="rollIn">On a pas toute la journée !</li>
-            </ul>
-        </h1>
+    <div class="tlt">
+        <ul class="texts">
+            <li data-in-effect="fadeInLeftBig" data-out-effect="fadeOut">Toucher pour commencer</li>
+            <li data-in-effect="fadeInLeftBig" data-out-effect="fadeOut">Bon tu veux prendre une photo ou pas ?</li>
+            <li data-in-effect="fadeInLeftBig" data-out-effect="fadeOut">On a pas toute la journée !</li>
+        </ul>
     </div>
 </div>
 
 <script type="text/javascript">
     $(document).ready(function () {
-        $('.tlt').textillate();
+        $('.tlt').textillate({loop: true});
+
+        $("body").one("click", function () {
+            $("#container").load("/get-ready");
+        })
     })
 </script>
-
-<div id="processing" style="display:none;" class="sk-spinner sk-spinner-circle">
-    <div class="sk-circle1 sk-circle"></div>
-    <div class="sk-circle2 sk-circle"></div>
-    <div class="sk-circle3 sk-circle"></div>
-    <div class="sk-circle4 sk-circle"></div>
-    <div class="sk-circle5 sk-circle"></div>
-    <div class="sk-circle6 sk-circle"></div>
-    <div class="sk-circle7 sk-circle"></div>
-    <div class="sk-circle8 sk-circle"></div>
-    <div class="sk-circle9 sk-circle"></div>
-    <div class="sk-circle10 sk-circle"></div>
-    <div class="sk-circle11 sk-circle"></div>
-    <div class="sk-circle12 sk-circle"></div>
-</div>
 
 </body>
 </html>
