--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -5,7 +5,6 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/jquery.lettering.js"></script>
     <script src="/js/jquery.textillate.js"></script>
-    <script src="/js/bootstrap.js"></script>
     <link rel="stylesheet" href="/style/animate.css">
     <link rel="stylesheet" href="/style/style.css">
 </head>
@@ -14,8 +13,7 @@
     <div class="tlt">
         <ul class="texts">
             <li data-in-effect="fadeInLeftBig" data-out-effect="fadeOut">Toucher pour commencer</li>
-            <li data-in-effect="fadeInLeftBig" data-out-effect="fadeOut">Bon tu veux prendre une photo ou pas ?</li>
-            <li data-in-effect="fadeInLeftBig" data-out-effect="fadeOut">On a pas toute la journée !</li>
+            <li data-in-effect="fadeInLeftBig" data-out-effect="fadeOut">Allez, viens, c'est cool !</li>
         </ul>
     </div>
 </div>
