--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -6,7 +6,7 @@ body {
     min-height: 100%;
     background-color: lightslategray;
     color: lightpink;
-    margin:0;
+    margin: 0;
 }
 
 #container {
@@ -21,4 +21,12 @@ body {
     right: 0;
     top: 45%;
     font-size: 5em;
+}
+
+#picture {
+    height: 700px;
+    border: 6px white solid;
+    margin: auto;
+    display: block;
+    margin-top: 25px;
 }
