--- a/src/main/resources/templates/show-picture.html
+++ b/src/main/resources/templates/show-picture.html
@@ -1,11 +1,27 @@
-<img id="picture" src="/get-picture/{{filename}}"/>
+<div class="picture-container">
+    <img id="picture" src="/get-picture/{{filename}}"/>
+</div>
+
+<div class="buttons-container">
+    <div id="retry" class="button-end">
+        <i class="fa fa-refresh"></i>
+    </div>
+    <div id="print" class="button-print">
+        <i class="fa fa-print"></i>
+    </div>
+</div>
 
 <script type="text/javascript">
-    $(
-            $("#print").on("click", function () {
-                $.ajax("/print/{{filename}}").success(function () {
-                    window.location("/");
-                })
+    $(document).ready(function () {
+
+        $("#print").on("click", function () {
+            $.ajax("/print/{{filename}}").done(function () {
+                window.location = "/";
             })
-    )
+        })
+
+        $("#retry").on("click", function () {
+            window.location = "/";
+        })
+    })
 </script>
