--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -7,6 +7,7 @@
     <script src="/js/jquery.textillate.js"></script>
     <link rel="stylesheet" href="/style/animate.css">
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/font-awesome.css">
 </head>
 <body>
 <div id="container">
